[package]
name = "canvas-downloader"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
filetime = "0.2"
futures = "0.3"
indicatif = "0.17"
num_cpus = "1"
reqwest = { version = "0.11", features = ["json"] }
sanitize-filename = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
termsize = "0.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
